# SomeSmallFG

./: CMakeLists.txt  InstallConanDependenciesDebug.bat  conanfile.py  conanfile.txt
Resources/: data.json
Resources/Sprites/Char1/: AirBackdash.panm  AirHitstun.panm  Airdash.panm  Backdash.panm  CrouchBlock.panm  CrouchHitstun.panm  CrouchIdle.panm  GroundDash.panm  GroundDashRecovery.panm  HighHitstun.panm  Idle.panm  JCLandingRecovery.panm  Jab.panm  Jump.panm  Knockdown.panm  KnockdownRecovery.panm  LowHitstun.panm  (+29 more)
src/: ActionProjectile.cpp  ActionProjectile.h  ActionResolver.cpp  ActionResolver.h  Actions.cpp  Actions.h  Background.cpp  Background.h  BattleLevel.cpp  BattleLevel.h  BlockHandler.cpp  BlockHandler.h  CMakeLists.txt  Char1.cpp  Char1.h  Character.cpp  Character.h  ComboPhysicsHandler.cpp  ComboPhysicsHandler.h  FixedQueue.cpp  FixedQueue.h  GameData.h  HealthHandler.cpp  HealthHandler.h  HealthWidget.cpp  HealthWidget.h  Hit.cpp  Hit.h  InputComparators.cpp  InputComparators.h  InputState.cpp  InputState.h  InteractableStateMachine.cpp  InteractableStateMachine.h  NotifyWidget.cpp  NotifyWidget.h  PTRecipe.h  PriorityHandler.cpp  PriorityHandler.h  Projectile.cpp  (+13 more)
src/Core/: AnimationManager.cpp  AnimationManager.h  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  EngineAnimation.cpp  EngineAnimation.h  FrameTimer.cpp  FrameTimer.h  HUD.cpp  HUD.h  InputSystem.cpp  InputSystem.h  Level.cpp  Level.h  ParticleManager.cpp  ParticleManager.h  Renderer.cpp  Renderer.h  ResourceCounter.cpp  ResourceCounter.h  Sprite.cpp  Sprite.h  StateMarker.cpp  StateMarker.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  TimelineProperty.cpp  TimelineProperty.h  Timer.cpp  Timer.h  Utils.h  Vector2.h  Window.cpp  Window.h
(+54 files in other folders)
